@@ -3,14 +3,19 @@ package com.example.securityl.serviceimpl;
 import com.cloudinary.Cloudinary;
 import com.cloudinary.utils.ObjectUtils;
 import com.example.securityl.model.Category;
-import com.example.securityl.model.CategoryProduct;
+
 import com.example.securityl.model.Enum.Role;
 import com.example.securityl.model.ImageProduct;
-import com.example.securityl.model.Products;
+import com.example.securityl.model.Product;
 import com.example.securityl.repository.*;
-import com.example.securityl.request.ProductRequest.RequestObject;
-import com.example.securityl.request.ProductRequest.SearchProduct;
-import com.example.securityl.response.ObjectResponse.ResponseObject;
+import com.example.securityl.dto.request.ProductRequest.WishlistRequest;
+import com.example.securityl.dto.request.response.Inventory.QuantityResponse;
+import com.example.securityl.dto.request.response.ProductResponse.ListProductResponse;
+import com.example.securityl.dto.request.response.ProductResponse.ProductResponse;
+import com.example.securityl.dto.request.ProductRequest.RequestObject;
+import com.example.securityl.dto.request.ProductRequest.SearchProduct;
+import com.example.securityl.dto.request.response.CategoryResponse.CategoryResponse;
+import com.example.securityl.dto.request.response.ProductResponse.ResponseObject;
 import com.example.securityl.service.JwtService;
 import com.example.securityl.service.ProductService;
 import jakarta.persistence.EntityNotFoundException;
@@ -24,6 +29,7 @@ import org.springframework.web.multipart.MultipartFile;
 
 import java.io.IOException;
 import java.util.*;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -31,11 +37,11 @@ public class ProductServiceImpl implements ProductService {
     private final ProductRepository productRepository;
     private final JwtService jwtService;
     private final UserRepository userRepository;
-    private final CategoryProductRepository categoryProductRepository;
     private final Cloudinary cloudinary;
     private final CategoryRepository categoryRepository;
 
-    public ResponseEntity<ResponseObject> createProduct(String productName, String title, String description, double discount, String color, String size, double price, String material, String thumbnail, Integer quantity, String brand,boolean favorite, Integer categoryId) {
+    @Override
+    public ResponseEntity<ResponseObject> createProduct(String productName, String title, String description, double discount, String color, String size, double price, String material, String thumbnail, Integer quantity, String brand, String categoryName) {
         try {
             Date date = new Date();
             String token = ((ServletRequestAttributes) Objects.requireNonNull(RequestContextHolder.getRequestAttributes()))
@@ -44,24 +50,28 @@ public class ProductServiceImpl implements ProductService {
                     .substring(7);
             String userEmail = jwtService.extractUsername(token);
             var requester = userRepository.findUserByEmail(userEmail).orElse(null);
-            if (requester == null || !(requester.getRole().equals(Role.STAFF) || requester.getRole().equals(Role.ADMIN))) {
+            if (requester == null || !(requester.getRole().equals(Role.staff) || requester.getRole().equals(Role.admin))) {
                 return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(new ResponseObject("Fail", "Unauthorized", null));
             }
             if (size == null || size.trim().isEmpty() || productName == null || productName.trim().isEmpty() || description == null || description.trim().isEmpty() || title == null || title.trim().isEmpty() || price <= 0) {
                 return ResponseEntity.badRequest().body(new ResponseObject("Fail", "Invalid request body", null));
             }
-            if(quantity <= 0 || quantity > 10){
-                return ResponseEntity.status(400).body(new ResponseObject("Fail","Quantity does not exist",null));
+            if (productRepository.existsProductByProductName(productName)) {
+                return ResponseEntity.badRequest().body(new ResponseObject("Fail", "Product existed", null));
             }
-            if (!(requester.getRole().equals(Role.ADMIN) || requester.getRole().equals(Role.STAFF))) {
+            if (quantity <= 0) {
+                return ResponseEntity.status(400).body(new ResponseObject("Fail", "Quantity does not exist", null));
+            }
+            if (!(requester.getRole().equals(Role.admin) || requester.getRole().equals(Role.staff))) {
                 return ResponseEntity.status(HttpStatus.FORBIDDEN).body(new ResponseObject("Fail", "Forbidden", null));
             }
-            Category category = categoryRepository.findById(categoryId).orElse(null);
-            if (category == null) {
+            Category category1 = categoryRepository.findByName(categoryName);
+            if (category1 == null) {
                 return ResponseEntity.status(HttpStatus.NOT_FOUND).body(new ResponseObject("Fail", "Category not found", null));
             }
-            List<Category> categoryList = Collections.singletonList(category);
-            Products product = Products.builder()
+            List<Category> categories = new ArrayList<>();
+            categories.add(category1);
+            Product product = Product.builder()
                     .thumbnail(thumbnail)
                     .productName(productName.trim())
                     .description(description.trim())
@@ -75,24 +85,55 @@ public class ProductServiceImpl implements ProductService {
                     .price(price)
                     .brand(brand)
                     .quantity(quantity)
-                    .favorite(favorite)
-                    .categories(categoryList)
+                    .categories(categories)
+                    .favorite(false)
                     .user(userRepository.findUserIdByEmail(userEmail))
                     .build();
-            Products savedProduct = productRepository.save(product);
-            CategoryProduct categoryProduct = CategoryProduct.builder()
-                    .product(product)
-                    .category(category)
-                    .build();
-            categoryProductRepository.save(categoryProduct);
-            return ResponseEntity.ok(new ResponseObject("Success", "Product created successfully", savedProduct));
+            Product savedProduct = productRepository.save(product);
+            return ResponseEntity.ok(new ResponseObject("Success", "Product created successfully", convertToProductResponse(savedProduct)));
         } catch (Exception e) {
             return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(new ResponseObject("Fail", "Internal server error", null));
         }
     }
 
 
+    private ProductResponse convertToProductResponse(Product savedProduct) {
+        return ProductResponse.builder()
+                .productId(savedProduct.getProductId())
+                .title(savedProduct.getTitle())
+                .discount(savedProduct.getDiscount())
+                .description(savedProduct.getDescription())
+                .createdAt(savedProduct.getCreatedAt())
+                .updatedAt(savedProduct.getUpdatedAt())
+                .size(savedProduct.getSize())
+                .productName(savedProduct.getProductName())
+                .thumbnail(savedProduct.getThumbnail())
+                .favorite(savedProduct.isFavorite())
+                .quantity(savedProduct.getQuantity())
+                .color(savedProduct.getColor())
+                .price(savedProduct.getPrice())
+                .materials(savedProduct.getMaterials())
+                .brand(savedProduct.getBrand())
+                .imageProducts(savedProduct.getImageProducts())
+                .build();
+    }
 
+    private List<CategoryResponse> convertToCategoryResponseList(List<Category> categories) {
+        List<CategoryResponse> categoryResponses = new ArrayList<>();
+        for (Category category : categories) {
+            CategoryResponse categoryResponse = convertToCategoryResponse(category);
+            categoryResponses.add(categoryResponse);
+        }
+        return categoryResponses;
+    }
+
+    private CategoryResponse convertToCategoryResponse(Category category) {
+        return CategoryResponse.builder()
+                .categoryId(category.getCategoryId())
+                .name(category.getName())
+                .description(category.getDescription())
+                .build();
+    }
 
 
     @Override
@@ -120,10 +161,10 @@ public class ProductServiceImpl implements ProductService {
             if (requestObject.getPrice() <= 0) {
                 return ResponseEntity.badRequest().body(new ResponseObject("Fail", "Price must be greater than 0", null));
             }
-            if (!(requester.getRole().equals(Role.ADMIN) || requester.getRole().equals(Role.STAFF))) {
+            if (!(requester.getRole().equals(Role.admin) || requester.getRole().equals(Role.staff))) {
                 return ResponseEntity.status(403).body(new ResponseObject("Fail", "You don't have permission", null));
             }
-            if(requestObject.getBrand()  == null || requestObject.getBrand().trim().isEmpty() ){
+            if (requestObject.getBrand() == null || requestObject.getBrand().trim().isEmpty()) {
                 return ResponseEntity.badRequest().body(new ResponseObject("Fail", "Brand is empty", null));
 
             }
@@ -141,7 +182,7 @@ public class ProductServiceImpl implements ProductService {
                 checkProduct.setQuantity(requestObject.getQuantity());
                 checkProduct.setBrand(requestObject.getBrand());
                 var updateProduct = productRepository.save(checkProduct);
-                return ResponseEntity.ok(new ResponseObject("Success", "Update product success", updateProduct));
+                return ResponseEntity.ok(new ResponseObject("Success", "Update product success", convertToProductResponse(updateProduct)));
             }
         } catch (Exception e) {
             return ResponseEntity.status(500).body(new ResponseObject("Fail", "Internal Server Error", null));
@@ -149,53 +190,71 @@ public class ProductServiceImpl implements ProductService {
         return ResponseEntity.status(500).body(ResponseObject.builder()
                 .status("Fail")
                 .message("Internal sever error ")
-                .payload(null)
+                .productResponse(null)
                 .build());
     }
 
     @Override
-    public Products getProductById(Integer productId) {
+    public ProductResponse getProductById(Integer productId) {
         try {
-            return productRepository.findProductByProductId(productId).orElse(null);
+            Optional<Product> productOptional = productRepository.findProductByProductId(productId);
+            if (productOptional.isPresent()) {
+                Product product = productOptional.get();
+                return convertToProductResponse(product);
+            } else {
+                return null;
+            }
         } catch (Exception e) {
             return null;
-        }
-
-    }
-
-    @Override
-    public ResponseEntity<ResponseObject> getProductByCategory(String categoryName) {
-        List<Products> productsList = productRepository.findAllByCategoryName(categoryName);
-        if (productsList.isEmpty()) {
-            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(new ResponseObject("Fail", "No products found for category: " + categoryName, null));
-        } else {
-            return ResponseEntity.ok(new ResponseObject("Success", "Products found for category: " + categoryName, productsList));
         }
     }
 
 
     @Override
     public ResponseEntity<ResponseObject> deleteProduct(Integer productId) {
+        String token = ((ServletRequestAttributes) Objects.requireNonNull(RequestContextHolder.getRequestAttributes()))
+                .getRequest()
+                .getHeader("Authorization")
+                .substring(7);
+        String userEmail = jwtService.extractUsername(token);
+        var requester = userRepository.findUserByEmail(userEmail).orElse(null);
+        assert requester != null;
+        if (!(requester.getRole().equals(Role.admin) || requester.getRole().equals(Role.staff))) {
+            return ResponseEntity.status(403).body(new ResponseObject("Fail", "You don't have permission", null));
+        }
         var checkProduct = productRepository.findProductByProductId(productId).orElse(null);
         if (checkProduct != null) {
+            for (Category category : checkProduct.getCategories()) {
+                category.getProducts().remove(checkProduct);
+                categoryRepository.save(category);
+            }
             productRepository.delete(checkProduct);
-            return ResponseEntity.ok(new ResponseObject("Success", "Delete successful", checkProduct));
+            return ResponseEntity.ok().body(new ResponseObject("Success", "Delete success", convertToProductResponse(checkProduct)));
         } else {
             return ResponseEntity.status(404).body(new ResponseObject("Fail", "Delete fail", null));
         }
     }
 
     @Override
-    public ResponseEntity<ResponseObject> getAll() {
+    public ResponseEntity<ListProductResponse> getAll() {
         try {
             var listProduct = productRepository.findAll();
-            return ResponseEntity.ok(new ResponseObject("Success", "List all product", listProduct));
+            List<ProductResponse> productResponseList = convertToProductResponseList(listProduct);
+            return ResponseEntity.ok(new ListProductResponse("Success", "List all product", productResponseList));
         } catch (Exception e) {
-            return ResponseEntity.badRequest().body(new ResponseObject("Fail", "Not find list product", null));
+            return ResponseEntity.badRequest().body(new ListProductResponse("Fail", "Not find list product", null));
         }
     }
 
 
+    private List<ProductResponse> convertToProductResponseList(List<Product> productList) {
+        List<ProductResponse> productResponseList = new ArrayList<>();
+        for (Product product : productList) {
+            ProductResponse productResponse = convertToProductResponse(product);
+            productResponseList.add(productResponse);
+        }
+        return productResponseList;
+    }
 
 
     @Override
@@ -208,7 +267,7 @@ public class ProductServiceImpl implements ProductService {
     @Override
     public void uploadProductImage(Integer productId, List<String> imageUrls) {
         try {
-            Products product = productRepository.findById(productId)
+            Product product = productRepository.findById(productId)
                     .orElseThrow(() -> new EntityNotFoundException("Product not found with id: " + productId));
             List<ImageProduct> imageProducts = new ArrayList<>();
             for (String imageUrl : imageUrls) {
@@ -225,44 +284,102 @@ public class ProductServiceImpl implements ProductService {
     }
 
     @Override
-    public ResponseEntity<ResponseObject> searchProduct(SearchProduct searchProduct) {
+    public ResponseEntity<ListProductResponse> searchProduct(SearchProduct searchProduct) {
         try {
-            List<Products> productsList = productRepository.findAll();
-            List<Products> showProduct = new ArrayList<>();
+            List<Product> productsList = productRepository.findAll();
+            List<Product> showProduct = new ArrayList<>();
+
             if (searchProduct.getProductId() != null) {
                 showProduct = productsList.stream()
-                        .filter(n -> n.getProductId() == searchProduct.getProductId())
-                        .toList();
-            }
-            if (searchProduct.getProductName() != null && !searchProduct.getProductName().trim().isEmpty()) {
+                        .filter(n -> n.getProductId().equals(searchProduct.getProductId()))
+                        .collect(Collectors.toList());
+            } else if (searchProduct.getProductName() != null && !searchProduct.getProductName().trim().isEmpty()) {
+                String productName = searchProduct.getProductName().toLowerCase();
                 showProduct = productsList.stream()
-                        .filter(n -> n.getProductName().toLowerCase().contains(searchProduct.getProductName().toLowerCase()))
-                        .toList();
+                        .filter(n -> n.getProductName().toLowerCase().contains(productName))
+                        .collect(Collectors.toList());
             }
-            return ResponseEntity.ok(new ResponseObject("Success", "List users", showProduct));
+
+            List<ProductResponse> list = convertToProductResponseList(showProduct);
+            return ResponseEntity.ok(new ListProductResponse("Success", "List products", list));
         } catch (Exception e) {
-            return ResponseEntity.badRequest().body(new ResponseObject("Fail", "Not found product", null));
+            return ResponseEntity.badRequest().body(new ListProductResponse("Fail", "Not found product", null));
         }
+    }
+
+
+    @Override
+    public List<ProductResponse> searchProducts(String materials, String brand, Double price, String color) {
+        if (materials == null && brand == null && price == null && color == null) {
+            return convertToProductResponseList(productRepository.findAll());
+        } else {
+            return convertToProductResponseList(productRepository.findProductsByFilter(materials, brand, price, color));
+        }
+    }
+
+    public List<Product> searchProductsVer2(String materials, String brand, Double minPrice, Double maxPrice, String color) {
+
+        return productRepository.findProductsByFilter2(materials, brand, minPrice, maxPrice, color);
+
+
     }
 
     @Override
-    public List<Products> searchProducts(String materials, String brand, Double price, String color) {
-        if (materials == null && brand == null && price == null && color == null) {
-            // Trả về toàn bộ danh sách sản phẩm nếu không có bộ lọc được áp dụng
-            return productRepository.findAll();
-        } else {
-            // Thực hiện tìm kiếm và áp dụng các bộ lọc
-            return productRepository.findProductsByFilter(materials, brand, price, color);
+    public ResponseEntity<ListProductResponse> viewWishList() {
+        List<Product> wishlistProducts = productRepository.findProductsByFavoriteTrue();
+
+
+
+
+
+
+        List<ProductResponse> response = convertToProductResponseList(wishlistProducts);
+        return ResponseEntity.ok().body(new ListProductResponse("Success", "List wishlist", response));
+    }
+
+
+
+    @Override
+    public ResponseEntity<QuantityResponse> trackInventory(String productName) {
+        Product product = productRepository.findProductsByProductName(productName);
+        if (product != null) {
+            String Name = product.getProductName();
+            int Quantity = product.getQuantity();
+            return ResponseEntity.ok().body(new QuantityResponse(Name, Quantity));
         }
-    }
-
-    public List<Products> searchProductsVer2(String materials, String brand, Double minPrice, Double maxPrice, String color) {
-
-            return productRepository.findProductsByFilter2(materials, brand, minPrice, maxPrice, color);
-
+        return ResponseEntity.ok().body(new QuantityResponse(null, null));
 
     }
 
-
+    @Override
+    public ResponseEntity<ResponseObject> addWishList(Integer productId, WishlistRequest wishlistRequest) {
+        try {
+            String token = ((ServletRequestAttributes) Objects.requireNonNull(RequestContextHolder.getRequestAttributes()))
+                    .getRequest()
+                    .getHeader("Authorization")
+                    .substring(7);
+            String userEmail = jwtService.extractUsername(token);
+            var requester = userRepository.findUserByEmail(userEmail).orElse(null);
+            if (requester == null) {
+                return ResponseEntity.status(404).body(new ResponseObject("Fail", "User not found", null));
+            }
+            var checkProduct = productRepository.findById(productId).orElse(null);
+            if (checkProduct != null) {
+                checkProduct.setFavorite(true);
+                var updateProduct = productRepository.save(checkProduct);
+                return ResponseEntity.ok(new ResponseObject("Success", "Add wish list success", convertToProductResponse(updateProduct)));
+            }
+        } catch (Exception e) {
+            return ResponseEntity.status(500).body(new ResponseObject("Fail", "Internal Server Error", null));
+        }
+        return ResponseEntity.status(500).body(ResponseObject.builder()
+                .status("Fail")
+                .message("Internal sever error ")
+                .productResponse(null)
+                .build());
+    }
 }
+
+
+
 
